--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -10,22 +10,14 @@
     <p> {{ group.description }}
     <article>
     {% for post in posts %}
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
-            </li>
-          </ul>
-          <p>{{ post.text }}</p>      
-          
-          {% if not forloop.last %}
-            <hr>
-          {% endif %}
-          
-        {% endfor %} 
-      <article>   
+      {% include 'includes/post_card.html' %}  
+
+      {% if not forloop.last %}
+        <hr>
+      {% endif %}
+      
+    {% endfor %} 
+    <article>   
     <!-- под последним постом нет линии -->
   </div>  
 {% endblock %} 
