Paginator, registration, autor, tech

--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -6,10 +6,11 @@
 
 {% block content %}
   <div class="container py-5">
+    {% include 'posts/includes/paginator.html' %}
     <h1>{{ group.title }}</h1>
     <p> {{ group.description }}
     <article>
-    {% for post in posts %}
+    {% for post in page_obj %}
       {% include 'includes/post_card.html' %}  
 
       {% if not forloop.last %}
@@ -19,5 +20,6 @@
     {% endfor %} 
     <article>   
     <!-- под последним постом нет линии -->
+    {% include 'posts/includes/paginator.html' %}
   </div>  
 {% endblock %} 
