Dymanic urls, post_detail, img

--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -5,5 +5,7 @@
 </footer>     {% endcomment %}
 
 <footer class="border-top text-center py-3">
-  <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>    
+  {% include 'posts/includes/paginator.html' %}
+  <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>
+  
 </footer> 
