--- a/yatube/about/templates/about/tech.html
+++ b/yatube/about/templates/about/tech.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Технологии{% endblock %}
+
+{% block title %}
+<title> Технологии </title>
+{% endblock %}
+
 {% block content %}
 
 {% comment %} Колонки с отступом сверху и снизу {% endcomment %}
 <div class="row">
+
   <h1>Вот что я умею</h1>
   {% comment %}
     Боковой блок со списком технологий 
@@ -25,6 +30,7 @@
     Займет всю ширину блока на мобильном
     и 75% при размерах экрана ≥768px
   {% endcomment %}
+
   <article class="col-12 col-md-9">
     <p>Текст страницы "Технологии"</p>
   </article>
