--- a/yatube/templates/includes/post_card.html
+++ b/yatube/templates/includes/post_card.html
@@ -1,9 +1,13 @@
 <ul>
     <li>
-      Автор: {{ post.author.get_full_name }}
+      <a href="{% url 'posts:profile' post.author.username %}" >
+        Автор: {{ post.author.get_full_name }}</a>
     </li>
     <li>
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
   </ul>
-  <p>{{ post.text }}</p>    
+  <p>{{ post.text}}</p>   
+
+
+  
