--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  <title> Пост {{ full_name.get_full_name }}</title>
+  <title> Пост {{ post.text|truncatechars:30 }}</title>
 {% endblock title%} 
 
 {% block content %}
@@ -9,39 +9,42 @@
 <html lang="ru">
   <head>
     <!-- Подключены иконки, стили и заполенены мета теги -->
-    <title>Пост <!-- Первые 30 букв поста --></title>
+    <title>Пост </title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <a class="navbar-brand" href="/">
-            <img src="/static/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            <span style="color:red">Ya</span>tube
-          </a>
-        </div>
-      </nav>      
-    </header>
+    
     <main>
       <div class="row">
         <aside class="col-12 col-md-3">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              Дата публикации: <!-- 31 июля 1854 --> 
+              Дата публикации: <!-- 31 июля 1854 --> {{ post.pub_date|date:"d E Y" }}
             </li>
-            <!-- если у поста есть группа -->   
-            <li class="list-group-item">
-              Группа: <!-- Название группы -->
-              <a href="<!-- -->">
-                все записи группы
+
+            <!-- если у поста есть группа -->  
+            
+             <li class="list-group-item">
+              Группа: <!-- Название группы -->{{ post.group.title }}
+              <hr>
+              <a href="{% url 'posts:group' post.group.slug %}">
+                все записи группы "{{ post.group.title }}"
               </a>
-            </li>
+            </li> 
+            
+
+            {% comment %} {% if post.group %}   
+            <a href="{% url 'posts:group' post.group.slug %}">
+              Все записи группы "{{ post.group.title }}"</a>
+            {% endif %}  {% endcomment %}
+
             <li class="list-group-item">
-              Автор: <!--Лев Толстой-->
+              Автор: <!--Лев Толстой-->{{ post.author.get_full_name }}
             </li>
+
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span ><!-- --></span>
+              Всего постов автора:  <span > {{ post_count }}</span>
             </li>
+
             <li class="list-group-item">
               <a href="<!-- -->">
                 все посты пользователя
@@ -49,26 +52,16 @@
             </li>
           </ul>
         </aside>
+        
         <article class="col-12 col-md-9">
           <p>
-           <!--
-            [Фокшаны.] Еще переходъ до Фокшанъ, во время котораго я ѣхалъ съ 
-            Монго. Человѣкъ пустой, но съ твердыми, хотя и ложными убѣжденіями.
-            Генерал[у] по этому должно быть случаю, угодно было спрашивать о мое
-            мъ здоровьи.
-            Свинья! К[о]вырялъ носъ и ничего не написалъ — вотъ 2 упрека за 
-            нын[ѣшній]     день. Послѣдній упрекъ становится слишкомъ частъ, 
-            хотя походъ и можетъ служить въ немъ отчасти извиненіемъ. 
-            Отношенія мои съ товарищами становятся такъ пріятны, что мнѣ 
-            жалко бросить штабъ. Здоровье кажется (2) лучше. 
-           --> 
+          {{ post.text}}
           </p>
         </article>
       </div> 
+      
     </main>
-    <footer class="border-top text-center py-3">
-      <p>© <!--2021 --> Copyright <span style="color:red">Ya</span>tube</p>
-    </footer>
+    
   </body>
 </html> 
 {% endblock %}
