--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,11 +1,4 @@
-{% comment %} <footer class="page-footer font-small blue border-top">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright 
-      <p><span style="color:red">Ya</span>tube</p> 
-    </div>    
-</footer>     {% endcomment %}
-
 <footer class="border-top text-center py-3">
   {% include 'posts/includes/paginator.html' %}
-  <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>
-  
-</footer> 
+  <p>© {{ year }} Copyright <span style="color: red;">Ya</span>tube</p>
+</footer>
