--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,64 +1,45 @@
-{% comment %} <header>
-    {% load static %}
-
-    <!-- Использованы классы бустрапа для создания типовой навигации с логотипом -->
-    <!-- В дальнейшем тут будет создано полноценное меню -->    
-    <nav class="navbar navbar-light" style="background-color: lightskyblue">
-      <div class="container">
-        <a class="navbar-brand" href="{% url 'posts:index' %}">
-          <img src="{% static 'img/logo.png' %}" width="30" height="30"> 
-          <!-- <img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> -->
-          <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
-          <span style="color:red">Ya</span>tube
-        </a>
-      </div>
-    </nav>      
-</header> {% endcomment %}
 <header>
   {% load static %}
-  <nav class="navbar navbar-light" style="background-color: lightskyblue">
-    <div class="container">
-      <a class="navbar-brand" href="{% url 'posts:index' %}">
-        <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt=""> 
-      <span style="color:red">Ya</span>tube
-      </a>
-      
+  <nav class="navbar navbar-light" style="background-color: lightskyblue;">
+      <div class="container">
+          <a class="navbar-brand" href="{% url 'posts:index' %}">
+              <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="" />
+              <span style="color: red;">Ya</span>tube
+          </a>
 
-      {% comment %}
-      Меню - список пунктов со стандартными классами Bootsrap.
-      Класс nav-pills нужен для выделения активных пунктов 
-      {% endcomment %}
-      <ul class="nav nav-pills">
-        <li class="nav-item"> 
-          <a class="nav-link" href="{% url 'about:author' %}">Об авторе</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about:tech' %}">Технологии</a>
-        </li>
-        {% if user.is_authenticated %}
-       
-        <li class="nav-item"> 
-          <a class="nav-link" href="<!--  -->">Новая запись</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:password_change' %}">Изменить пароль</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:logout' %}">Выйти</a>
-        </li>
-        <li>
-          Пользователь: {{ user.username }}
-        </li>
-        {% else %}
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:login' %}">Войти</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="{% url 'users:signup' %}">Регистрация</a>
-        </li>
-        {% endif %}
-      </ul>
-      {# Конец добавленого в спринте #}
-    </div>
-  </nav>      
-</header> 
+          {% comment %} Меню - список пунктов со стандартными классами Bootsrap. Класс nav-pills нужен для выделения активных пунктов {% endcomment %}
+          <ul class="nav nav-pills">
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'about:author' %}">Об авторе</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'about:tech' %}">Технологии</a>
+              </li>
+              {% if user.is_authenticated %}
+
+              <li class="nav-item">
+                  {% comment %} href="{% url 'posts:create_post' %} {% endcomment %}
+                  <a class="nav-link" href="{% url 'posts:create_post' %}"> Новая запись </a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link link-light" href="{% url 'users:password_change' %}">Изменить пароль</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link link-light" href="{% url 'users:logout' %}">Выйти</a>
+              </li>
+              <li>
+                  Пользователь: {{ user.username }}
+              </li>
+              {% else %}
+              <li class="nav-item">
+                  <a class="nav-link link-light" href="{% url 'users:login' %}">Войти</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link link-light" href="{% url 'users:signup' %}">Регистрация</a>
+              </li>
+              {% endif %}
+          </ul>
+          {# Конец добавленого в спринте #}
+      </div>
+  </nav>
+</header>
