--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  <title>{{ title }}</title>
+  <title> Посты группы: "{{ group.title }}"</title>
 {% endblock title%}  
 
 {% block content %}
