--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,35 +1,28 @@
 <!-- templates/posts/index.html -->
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 
 {% block title %}
-  {% comment %} <title>{{ title }}</title> {% endcomment %}
-  <title>Последние обновления на сайте</title>
+    <title>Последние обновления на сайте</title>
 {% endblock %} 
 
 {% block content %}
-
-    <!-- класс py-5 создает отступы сверху и снизу блока -->
+<!-- класс py-5 создает отступы сверху и снизу блока -->
+<div class="container py-5">
+    {% for post in page_obj %} 
+        {% include 'includes/post_card.html' %} 
+        <a href=" {% url 'posts:post_detail' post.id %} ">подробная информация </a>
+        <br />
+        
+        {% if post.group %}
+            <a href="{% url 'posts:group' post.group.slug %}"> все записи группы "{{ post.group.title }}"</a>
+        {% endif %} 
     
-    <div class="container py-5">    
-      <h1>Последние обновления на сайте {{ text }}</h1>
-      {% for post in page_obj %}
-      {% include 'includes/post_card.html' %}  
-                  
-      {% if post.group %}   
-        <a href="{% url 'posts:group' post.group.slug %}">
-          Все записи группы "{{ post.group.title }}"</a>
-      {% endif %} 
-      
-      {% if not forloop.last %}
-        <hr>
-        {% endif %}
-      
-      {% endfor %} 
+        {% if not forloop.last %}
+            <hr />
+        {% endif %} 
+    {% endfor %}
     <!-- под последним постом нет линии -->
-      {% comment %} {% include 'posts/includes/paginator.html' %}   {% endcomment %}
+</div>
 
-    </div>   
-      
-{% endblock %} 
-
+{% endblock %}
 
