--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Войти{% endblock %}
+
+{% block title %}<title> Войти на сайт Yatube </title>
+{% endblock %}
+
 {% block content %}
 {% load user_filters %}
   <div class="row justify-content-center">
